src/objects/Lease_Proposal__c.object
<CustomObject>
    <description>Archived system function</description>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leasing_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Client__r.Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Appointment__c</fullName>
        <label>Date of First Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Lease_Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tenant Representation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord Representation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Died</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to be Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <label>Win Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>system.leasing proposal</label>
    <listViews>
        <fullName>Active_Leasing_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Company__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Notes__c</columns>
        <columns>Property__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Win_Probability__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Working,Waiting to be Presented,Presented</value>
        </filters>
        <label>Active Leasing Proposals</label>
    </listViews>
    <listViews>
        <fullName>Died_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Company__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Notes__c</columns>
        <columns>Property__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>Win_Probability__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Died</value>
        </filters>
        <label>Died Proposals</label>
    </listViews>
    <listViews>
        <fullName>Not_Won_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Company__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Notes__c</columns>
        <columns>Property__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>Win_Probability__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Won</value>
        </filters>
        <label>Not Won Proposals</label>
    </listViews>
    <listViews>
        <fullName>Won_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Company__c</columns>
        <columns>Date_Delivered__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Notes__c</columns>
        <columns>Property__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>Win_Probability__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </filters>
        <label>Won Proposals</label>
    </listViews>
    <nameField>
        <label>Leasing Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>system.leasing proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>